--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <meta name="description" content="Awesome React E-Commerce Store" />
+    <meta name="keywords" content="E-Commerce, React, Node, Express" />
+    <meta name="author" content="Austin Moore" />
     <meta name="theme-color" content="#000000" />
     <!--
       manifest.json provides metadata used when your web app is added to the
